--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     <meta
       name="description"
       content="Paweł Sławuta personal portfolio."
     />
+    <meta property="og:image" content="../src/images/preview" />
     <title>Paweł Sławuta</title>
   </head>
   <body>
