Fixing jumbo animation on mobile.

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
       name="description"
       content="Paweł Sławuta personal portfolio."
     />
-    <meta property="og:image" content="../src/images/preview" />
+    <meta
+    property="og:image"
+    content="https://skwlx.github.io/Portfolio/preview.png"
+  />
     <title>Paweł Sławuta</title>
   </head>
   <body>
