Fixing animation in every component, edit README

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     <meta
       name="description"
-      content="Paweł Sławuta personal portfolio."
+      content="Creating awesome things."
     />
     <meta
     property="og:image"
